Fix Events and Tabs alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -184,9 +184,7 @@ select {
 }
 
 /* COVID Header SASS */
-.covidMain {
 
-}
 
 /* Header SASS */
 .header {
@@ -201,10 +199,12 @@ select {
 
 /* Facts Bubbles SASS*/
 .cfFacts {
-  text-align: center;
+  grid-template-columns: minmax(100px, auto) auto auto;
+  margin-bottom: 10px;
 }
 
 .factsContent {
+  text-align: center;
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   padding: 13px;
